# bio-mcp

./: .env.example  .gitignore  ARCHITECTURE.md  CHUNKING_STRATEGY.md  CIRCULAR_DEPENDENCY_PATTERN.md  CLAUDE.md  COMPANY_INTELLIGENCE.md  CONFIG.md  CTGOV_IMPLEMENTATION.md  Dockerfile  HTTP_APPROACH.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_OTHER.md  MULTISOURCE_REFACTOR.md  Makefile  NEXT_PRIORITIES.md  ONBOARDING.md  ORCHESTRATOR_DESIGN_IMPL.md  PUBMED_S3_ARCHIVE_JOBS.md  RAG_IMPLEMENTATION_PLAN_V2.md  RAG_STEP_1_MODELS.md  RAG_STEP_2_CHUNKING.md  RAG_STEP_3_WEAVIATE.md  RAG_STEP_4_EMBEDDING.md  RAG_STEP_5_REINGEST.md  RAG_STEP_6_RAG_TWEAKS.md  RAG_STEP_7_TESTING.md  README.md  STEP_T1.md  STEP_T2.md  STEP_T4.md  STEP_T7.md  TEST_CLEANUP_SUMMARY.md  TEST_PERFORMANCE_OPTIMIZATIONS.md  alembic.ini  benchmark_20250824_093633.json  benchmark_document_chunk_service.py  benchmark_results_20250823_124954.json  benchmark_results_20250823_125114.json  benchmark_results_20250823_125757.json  (+12 more)
bio-mcp-infra/: cloudwatch.tf  ecr.tf  ecs.tf  eventbridge.tf  iam.tf  main.tf  outputs  providers.tf  rds.tf  s3.tf  ssm.tf  tfplan  variables.tf
bio-mcp-infra/envs/: dev.tfvars.example
bioinvest-copilot/: IMPLEMENTATION_ROADMAP.md  PRODUCT_VISION.md  README.md
bioinvest-copilot-poc/: API_CONTRACT.md  API_CONTRACTS.md  MILESTONE_PLAN.md  README.md
bioinvest-copilot-poc/backend/: README.md  main.py  pyproject.toml
bioinvest-copilot-poc/backend/src/models/: schemas.py
bioinvest-copilot-poc/backend/src/orchestrator/: bio_mcp_client.py  langgraph_client.py
bioinvest-copilot-poc/backend/src/services/: synthesis.py
bioinvest-copilot-poc/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
bioinvest-copilot-poc/frontend/src/: App.tsx  index.css  shared-types.ts
bioinvest-copilot/personas/: USER_PERSONAS.md
bioinvest-copilot/technical/: AI_ML_ARCHITECTURE.md  API_DESIGN.md  DATA_ARCHITECTURE.md  INFRASTRUCTURE.md  SYSTEM_ARCHITECTURE.md
clients/: README.md  cli.py
decision_archive/: ENVIRONMENT.md  INCREASE_TEST_COVERAGE.md  MCP_TESTING.md  MULTISOURCE_REFACTOR.md  NEXT_PRIORITIES.md  ONBOARDING.md  ONBOARDING_IMPLEMENTATION_PLAN.md  RAG_OPTIONAL_WEAVIATE_NEW_SCHEMA.md  RAG_STEP_2_COMPLETION.md  RAG_STEP_4A_NEW_EMBEDDING.md  README.md  STEP_T0.md  STEP_T3.md  STEP_T5.md  STEP_T6.md  TEST_CLEANUP_PLAN.md
docs/: ASYNC_MOCKING_ISSUE_ANALYSIS.md  TESTCONTAINERS_POSTGRES_GUIDE.md  TESTCONTAINERS_REFACTORING_SUMMARY.md
external_api/: ctg-oas-v2.yaml
job_plans/: HTTP_APPROACH.md  JOB_ARCH_PLAN.md
migrations/: env.py
migrations/versions/: 114ec95d9e6a_add_normalized_documents_table.py  20250820_094800_initial_schema_with_pubmed.py  b984555eaae5_add_jobs_table_for_async_operations.py
orchestrator/: LANGGRAPH_DESIGN.md  LANGGRAPH_DESIGN_V2.md
orchestrator-ui/: IMPLEMENTATION_PLAN.md  README.md
orchestrator-ui/milestones/: M1_API_INTEGRATION.md  M2_CORE_UI.md  M3_STREAMING.md  M4_VISUALIZATION.md  M5_POLISH.md
orchestrator-ui/specs/: API_SPEC.md  COMPONENTS.md  DATA_FLOW.md
orchestrator/milestones/: M0_LANGGRAPH_SCAFFOLDING.md  M1_LANGGRAPH_NODES.md  M2_LANGGRAPH_TOOL_INTEGRATION.md  M3_LANGGRAPH_STATE_MANAGEMENT.md  M4_LANGGRAPH_SYNTHESIS.md  M5_LANGGRAPH_OBSERVABILITY.md  M6_LANGGRAPH_TESTING.md  M7_LANGGRAPH_OPTIMIZATION.md
scripts/: benchmark_chunking.py  benchmark_document_chunk_service.py  benchmark_embedding_v2.py  benchmark_embedding_v2_simple.py  bootstrap.sh  coverage.py  create_collection_v2.py  create_weaviate_schema.py  mcp_cli.py  reingest_data.py  setup-config.sh  setup_config.py  test.sh  validate_chunking.py  validate_migration.py  weaviate_info.py
src/bio_mcp/: PUBMED_QUERY.md  __init__.py  config.py  database.py  embeddings.py  error_handling.py  health.py  logging_config.py  main.py  main_http.py  metrics.py  pubmed_client.py  pubmed_tools.py  quality_scoring.py  rag_tools.py  search_config.py  security.py  services.py  tool_definitions.py  weaviate_client.py
src/bio_mcp/clients/: database.py  migrations.py  pubmed_client.py  weaviate_client.py
src/bio_mcp/config/: config.py  logging_config.py  search_config.py  security.py
src/bio_mcp/core/: embeddings.py  error_handling.py  quality_scoring.py
src/bio_mcp/http/: __init__.py  adapters.py  app.py  errors.py  (+3 more)
tests/: __init__.py  conftest.py  test_corpus_checkpoints.py  test_end_to_end_rag_workflow.py  test_hybrid_search.py  test_incremental_sync.py  test_local_embeddings_integration.py  test_mcp_resources.py  test_migrations.py  test_quality_scoring.py  test_rag_tools.py  test_real_weaviate_integration.py
tests/contracts/: README.md  __init__.py  conftest.py  test_api_contracts.py  test_core_contracts.py  test_document_model_compatibility.py  test_json_schema_contracts.py
tests/e2e/: __init__.py  test_docker.py  test_docker_compose.py
tests/fixtures/: biomedical_test_data.py  rag_test_data.py
tests/http/: test_adapters.py  test_app.py  test_concurrency.py  test_errors.py  test_health_database.py  test_health_orchestrator.py  test_health_weaviate.py  test_job_api.py  test_job_integration.py  test_job_models.py  test_job_service.py  test_job_worker.py  test_observability.py  test_registry.py  test_tracing.py
tests/integration/: README.md  __init__.py  conftest.py  docker-compose-weaviate.yml  test_database_integration.py  test_database_simple_integration.py  test_docker.py  test_docker_testcontainers.py  test_graceful_shutdown.py  test_openai_embeddings.py  test_pubmed_integration.py  test_pubmed_tools_integration.py  test_rag_quality.py  test_services_integration.py  test_weaviate_integration.py  test_weaviate_v2.py
tests/performance/: test_chunking_performance.py
tests/unit/: __init__.py  test_base_models.py  test_checkpoints.py  test_config.py  test_database_models.py  test_database_simple.py  test_error_handling.py  test_health.py  test_pubmed_client.py  test_pubmed_models.py  test_pubmed_tools.py  test_quality_scoring.py  test_security.py  test_server.py
tests/utils/: mcp_validators.py  test_helpers.py
(+212 files in other folders)
